addition de monetary_bis pour étude distribution

--- a/Notebook/3.CAH.ipynb
+++ b/Notebook/3.CAH.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,6 +67,7 @@
        "      <th>Recency</th>\n",
        "      <th>Frequency</th>\n",
        "      <th>Monetary</th>\n",
+       "      <th>Monetary_bis</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -76,6 +77,7 @@
        "      <td>27.289810</td>\n",
        "      <td>2</td>\n",
        "      <td>1.303348</td>\n",
+       "      <td>38.71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -83,6 +85,7 @@
        "      <td>14.162002</td>\n",
        "      <td>1</td>\n",
        "      <td>1.601216</td>\n",
+       "      <td>141.46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -90,6 +93,7 @@
        "      <td>13.051752</td>\n",
        "      <td>1</td>\n",
        "      <td>1.647432</td>\n",
+       "      <td>179.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -97,6 +101,7 @@
        "      <td>25.737451</td>\n",
        "      <td>1</td>\n",
        "      <td>1.457031</td>\n",
+       "      <td>72.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -104,9 +109,11 @@
        "      <td>22.505471</td>\n",
        "      <td>1</td>\n",
        "      <td>1.220373</td>\n",
+       "      <td>28.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -118,6 +125,7 @@
        "      <td>33.093157</td>\n",
        "      <td>1</td>\n",
        "      <td>1.494089</td>\n",
+       "      <td>85.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96092</th>\n",
@@ -125,6 +133,7 @@
        "      <td>22.786720</td>\n",
        "      <td>1</td>\n",
        "      <td>1.663569</td>\n",
+       "      <td>195.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96093</th>\n",
@@ -132,6 +141,7 @@
        "      <td>28.407875</td>\n",
        "      <td>1</td>\n",
        "      <td>1.723809</td>\n",
+       "      <td>271.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96094</th>\n",
@@ -139,6 +149,7 @@
        "      <td>23.908753</td>\n",
        "      <td>1</td>\n",
        "      <td>1.686544</td>\n",
+       "      <td>220.58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96095</th>\n",
@@ -146,30 +157,44 @@
        "      <td>21.549312</td>\n",
        "      <td>1</td>\n",
        "      <td>1.498673</td>\n",
+       "      <td>86.86</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>96096 rows × 4 columns</p>\n",
+       "<p>96096 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     customer_unique_id    Recency  Frequency  Monetary\n",
-       "0      7c396fd4830fd04220f754e42b4e5bff  27.289810          2  1.303348\n",
-       "1      af07308b275d755c9edb36a90c618231  14.162002          1  1.601216\n",
-       "2      3a653a41f6f9fc3d2a113cf8398680e8  13.051752          1  1.647432\n",
-       "3      7c142cf63193a1473d2e66489a9ae977  25.737451          1  1.457031\n",
-       "4      72632f0f9dd73dfee390c9b22eb56dd6  22.505471          1  1.220373\n",
-       "...                                 ...        ...        ...       ...\n",
-       "96091  6359f309b166b0196dbf7ad2ac62bb5a  33.093157          1  1.494089\n",
-       "96092  da62f9e57a76d978d02ab5362c509660  22.786720          1  1.663569\n",
-       "96093  737520a9aad80b3fbbdad19b66b37b30  28.407875          1  1.723809\n",
-       "96094  5097a5312c8b157bb7be58ae360ef43c  23.908753          1  1.686544\n",
-       "96095  60350aa974b26ff12caad89e55993bd6  21.549312          1  1.498673\n",
+       "                     customer_unique_id    Recency  Frequency  Monetary  \\\n",
+       "0      7c396fd4830fd04220f754e42b4e5bff  27.289810          2  1.303348   \n",
+       "1      af07308b275d755c9edb36a90c618231  14.162002          1  1.601216   \n",
+       "2      3a653a41f6f9fc3d2a113cf8398680e8  13.051752          1  1.647432   \n",
+       "3      7c142cf63193a1473d2e66489a9ae977  25.737451          1  1.457031   \n",
+       "4      72632f0f9dd73dfee390c9b22eb56dd6  22.505471          1  1.220373   \n",
+       "...                                 ...        ...        ...       ...   \n",
+       "96091  6359f309b166b0196dbf7ad2ac62bb5a  33.093157          1  1.494089   \n",
+       "96092  da62f9e57a76d978d02ab5362c509660  22.786720          1  1.663569   \n",
+       "96093  737520a9aad80b3fbbdad19b66b37b30  28.407875          1  1.723809   \n",
+       "96094  5097a5312c8b157bb7be58ae360ef43c  23.908753          1  1.686544   \n",
+       "96095  60350aa974b26ff12caad89e55993bd6  21.549312          1  1.498673   \n",
        "\n",
-       "[96096 rows x 4 columns]"
+       "       Monetary_bis  \n",
+       "0             38.71  \n",
+       "1            141.46  \n",
+       "2            179.12  \n",
+       "3             72.20  \n",
+       "4             28.62  \n",
+       "...             ...  \n",
+       "96091         85.08  \n",
+       "96092        195.00  \n",
+       "96093        271.01  \n",
+       "96094        220.58  \n",
+       "96095         86.86  \n",
+       "\n",
+       "[96096 rows x 5 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
